Kubernetes/Kubernetes-1/manifests/app/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx #1
  template: # = POD
    metadata:
      labels:
        app: nginx #1
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - kube5
                      - kube4
      tolerations:
        - key: nginx
          operator: Equal
          value: "yes"
          effect: NoExecute
      containers:
        - name: nginx
          image: nginx:1.24
          ports:
            - containerPort: 80
          volumeMounts:
            - name: conf
              mountPath: "/tmp/cm/"
              readOnly: true
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "128Mi"
              cpu: "200m"
      volumes:
        - name: conf
          configMap:
            name: nginx-configmap
