Kubernetes/Kubernetes-1/manifests/app/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-nginx-ingress
  labels:
    app: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
  #   cert-manager.io/issuer: self-signed-issuer
spec:
  # tls:
  #   - hosts:
  #       - hello-world.info
  #     secretName: own-ca-secret
  rules:
    - host: hello-world.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-srv
                port:
                  number: 8080
